<resources>
    <string name="app_name">UlybkaRadugiApp</string>
    <string name="index_number">Порядковый номер</string>
    <string name="document_id">Идендефикатор документа</string>
    <string name="document_group">Группа документа</string>
    <string name="number_of_order">Текстовый номер заказа</string>
    <string name="reload_list">Обновить список</string>
    <string name="element_name">Наименование элемента</string>
    <string name="element_group">Наименование группы</string>
    <string name="element_category">Наименование категории</string>
    <string name="element_amount">Количество элементов</string>
    <string name="isready_point_description">isReady point</string>
    <string name="cache_details">Кешировать данные</string>
</resources>